# 3DRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: canvas.cc  canvas.h  color.cc  color.h  scene.cc  scene.h  sphere.cc  sphere.h  vec3.cc  vec3.h
src/Raytracer/: light.h  main.cc  ray.h  raytracer.cc  raytracer.h
tests/: test_color.cc  test_vec3.cc
